# SIGA-VOTACIONES

./: .gitignore  README.md  pyproject.toml
app/: borrar.py  main.py
app/api/: router.py
app/api/routes/v1/: MeetType.py  Prueba.py  Status.py  Vote.py  Voting.py  VotingType.py  auth.py  rol.py  user.py  user_rol.py
app/config/: database.py
app/core/: config.py
app/core/settings/: __init__.py  app.py  base.py  development.py
app/infraestructure/db/: config.py
app/infraestructure/db/crud/: base.py  rol.py  user.py  user_rol.py
app/infraestructure/db/models/: rol.py  user.py  user_rol.py
app/infraestructure/db/utils/: session.py
app/models/: BaseModel.py  MeetType.py  Prueba.py  Status.py  Vote.py  Voting.py  VotingType.py  enums.py  prueba2.py
app/policies/: BasePolicy.py  VotePolicy.py  VotingPolicy.py
app/protocols/db/crud/: rol.py  user_rol.py
app/protocols/db/models/: user.py
app/protocols/services/: base.py
app/schemas/: rol.py  user.py  user_rol.py
app/services/: BaseService.py  MeetType.py  Prueba.py  Status.py  Vote.py  Voting.py  VotingType.py  jwt.py  user.py  user_rol.py
config_db/: Dockerfile  create.sql
docker/: Dockerfile.dev  docker-compose.dev.yml
tests/: ejemplo.py  status_test.py  test_main.py  test_status.py
