[tool.poetry]
name = "app"
version = "0.1.0"
description = "A FastAPI project using SQLModel and PostgreSQL"
authors = ["Your Name <you@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
fastapi = "^0.78.0"
sqlmodel = "^0.0.19"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.5"
uvicorn = "^0.17.6"
cuid = "^0.4" 

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
