[tool.poetry]
name = "app"
version = "0.1.0"
description = "A FastAPI project using SQLModel and PostgreSQL"
authors = ["Your Name <you@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.5"
uvicorn = "^0.17.6"
cuid = "^0.4" 
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
requests = "^2.32.3"
anyio = "^4.4.0"
starlette = "^0.37.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
